# pac-man-clone

./: .gitignore  CMakeLists.txt  README.md
game-framework/: CMakeLists.txt
game-framework/include/: component.h
mods/: CMakeLists.txt
mods/invisible-ghost/: CMakeLists.txt  invisible-ghost.h
mods/speed-boost/: CMakeLists.txt
pac-man/: CMakeLists.txt
pac-man/app/: main.cpp
